自动补全 mock 的初步实现。

--- a/clang-tools-extra/clangd/refactor/tweaks/CMakeLists.txt
+++ b/clang-tools-extra/clangd/refactor/tweaks/CMakeLists.txt
@@ -25,7 +25,7 @@ add_clang_library(clangDaemonTweaks OBJECT
   RawStringLiteral.cpp
   RemoveUsingNamespace.cpp
   SwapIfBranches.cpp
-
+  ExpandMocker.cpp
   LINK_LIBS
   clangAST
   clangBasic
